--- a/RPCalculator/packages.config
+++ b/RPCalculator/packages.config
@@ -1,5 +1,14 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="1.0.8" targetFramework="net461" />
-  <package id="Microsoft.Net.Compilers" version="2.4.0" targetFramework="net461" developmentDependency="true" />
+  <package id="AngularJS.Core" version="1.6.8" targetFramework="net461" />
+  <package id="AngularJS.Messages" version="1.6.8" targetFramework="net461" />
+  <package id="AngularJS.Route" version="1.6.8" targetFramework="net461" />
+  <package id="angularjs.TypeScript.DefinitelyTyped" version="6.5.6" targetFramework="net461" />
+  <package id="bootstrap" version="4.1.1" targetFramework="net461" />
+  <package id="FontAwesome" version="4.7.0" targetFramework="net461" />
+  <package id="gsklee.ngStorage" version="0.3.10" targetFramework="net461" />
+  <package id="jQuery" version="3.3.1" targetFramework="net461" />
+  <package id="jquery.TypeScript.DefinitelyTyped" version="3.1.2" targetFramework="net461" />
+  <package id="ngstorage.TypeScript.DefinitelyTyped" version="0.0.5" targetFramework="net461" />
+  <package id="popper.js" version="1.14.3" targetFramework="net461" />
 </packages>
