--- a/RPCalculator/RPCalculator.csproj
+++ b/RPCalculator/RPCalculator.csproj
@@ -23,7 +23,7 @@
     <UseGlobalApplicationHostFile />
     <NuGetPackageImportStamp>
     </NuGetPackageImportStamp>
-    <TypeScriptToolsVersion>2.6</TypeScriptToolsVersion>
+    <TypeScriptToolsVersion>2.8</TypeScriptToolsVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -115,7 +115,7 @@
     <Content Include="Scripts\esm\popper.js.map" />
     <Content Include="Scripts\esm\popper-utils.min.js.map" />
     <Content Include="Scripts\esm\popper-utils.js.map" />
-    <Content Include="Scripts\angular-messages.min.js.map" />
+    <Content Include="Scripts\rpcalculator\angular-messages.min.js.map" />
     <None Include="Scripts\jquery-3.3.1.intellisense.js" />
     <Content Include="Scripts\jquery-3.3.1.js" />
     <Content Include="Scripts\jquery-3.3.1.min.js" />
@@ -160,6 +160,7 @@
     </None>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Views\competitors.html" />
     <Content Include="Views\judges.html" />
     <Content Include="Views\workbook.html" />
     <Content Include="Views\worksheet.html" />
