--- a/RPCalculator/RPCalculator.csproj
+++ b/RPCalculator/RPCalculator.csproj
@@ -115,6 +115,7 @@
     <Content Include="Content\bootswatch\yeti\bootstrap.min.css" />
     <Content Include="Content\font-awesome.css" />
     <Content Include="Content\font-awesome.min.css" />
+    <Content Include="podium.png" />
     <Content Include="Content\rpcalculator.css" />
     <Content Include="Content\rpcalculator.min.css">
       <DependentUpon>rpcalculator.css</DependentUpon>
@@ -247,6 +248,7 @@
     </None>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="trophy.jpg" />
     <Content Include="Views\calculation.html" />
     <Content Include="Views\competitors.html" />
     <Content Include="Views\dialog.html" />
