--- a/RPCalculator/RPCalculator.csproj
+++ b/RPCalculator/RPCalculator.csproj
@@ -180,6 +180,7 @@
     <Content Include="example.json" />
     <Content Include="muevelo.json" />
     <None Include="packages.config" />
+    <Content Include="rpc.min.js" />
     <Content Include="Scripts\angular-mocks.js" />
     <Content Include="Scripts\angular-route.js" />
     <Content Include="Scripts\angular-route.min.js" />
@@ -204,6 +205,7 @@
     <Content Include="Scripts\bootstrap.bundle.js.map" />
     <Content Include="Scripts\angular.min.js.map" />
     <Content Include="Scripts\angular-route.min.js.map" />
+    <Content Include="ScoreSheets.xlsx" />
     <None Include="Scripts\jquery-3.3.1.intellisense.js" />
     <Content Include="Scripts\jquery-3.3.1.js" />
     <Content Include="Scripts\jquery-3.3.1.min.js" />
