--- a/RPCalculator/RPCalculator.csproj
+++ b/RPCalculator/RPCalculator.csproj
@@ -206,6 +206,7 @@
     <Content Include="Scripts\angular.min.js.map" />
     <Content Include="Scripts\angular-route.min.js.map" />
     <Content Include="ScoreSheets.xlsx" />
+    <Content Include="rpcalculator.manifest" />
     <None Include="Scripts\jquery-3.3.1.intellisense.js" />
     <Content Include="Scripts\jquery-3.3.1.js" />
     <Content Include="Scripts\jquery-3.3.1.min.js" />
