--- a/RPCalculator/RPCalculator.csproj
+++ b/RPCalculator/RPCalculator.csproj
@@ -128,6 +128,7 @@
     <Content Include="fonts\fontawesome-webfont.woff" />
     <Content Include="fonts\fontawesome-webfont.ttf" />
     <Content Include="fonts\fontawesome-webfont.eot" />
+    <Content Include="bos19.json" />
     <None Include="bundleconfig.json" />
     <Content Include="Content\bootswatch\yeti\_variables.scss" />
     <Content Include="Content\bootswatch\yeti\_bootswatch.scss" />
