--- a/RPCalculator/packages.config
+++ b/RPCalculator/packages.config
@@ -3,6 +3,7 @@
   <package id="AngularJS.Core" version="1.7.8" targetFramework="net461" />
   <package id="AngularJS.Route" version="1.7.8" targetFramework="net461" />
   <package id="angularjs.TypeScript.DefinitelyTyped" version="6.5.6" targetFramework="net461" />
+  <package id="animate.css" version="3.3.0.0" targetFramework="net461" />
   <package id="bootstrap" version="4.3.1" targetFramework="net461" />
   <package id="Bootswatch" version="4.0.0" targetFramework="net461" />
   <package id="FontAwesome" version="4.7.0" targetFramework="net461" />
